--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2186,16 +2186,12 @@
 				background-image: url("../img/banner.jpg");
 			}
 
-			#main > section.two {
+			#main > section:nth-child(even) {
 				background-color: #f5fafa;
 			}
 
-			#main > section.three {
+			#main > section:nth-child(odd) {
 				background-color: #ecf1f1;
-			}
-
-			#main > section.four {
-				background-color: #e8edec;
 			}
 
 /* Wide */
